fix: right-align mobile save dropdown to media edge

--- a/src/features/product-detail/ProductDetail.module.css
+++ b/src/features/product-detail/ProductDetail.module.css
@@ -77,6 +77,11 @@
   top: 8px;
   right: 10px;
   z-index: 2;
+  --wishlist-menu-right-offset: 0;
+  --wishlist-menu-left-offset: auto;
+  --wishlist-menu-min-width: 170px;
+  --wishlist-menu-width: min(190px, calc(100vw - 22px));
+  --wishlist-menu-max-width: min(220px, calc(100vw - 22px));
 }
 
 .productDetail__save {
