--- a/src/shared/components/product-card/ProductCard.module.css
+++ b/src/shared/components/product-card/ProductCard.module.css
@@ -318,10 +318,10 @@
     --wishlist-wrapper-left: auto;
     --wishlist-wrapper-width: auto;
     --wishlist-wrapper-z-index: 3;
-    --wishlist-menu-right-offset: auto;
-    --wishlist-menu-left-offset: 0;
+    --wishlist-menu-right-offset: 0;
+    --wishlist-menu-left-offset: auto;
     --wishlist-menu-min-width: 170px;
-    --wishlist-menu-width: auto;
+    --wishlist-menu-width: min(170px, calc(100vw - 18px));
     --wishlist-menu-max-width: min(220px, calc(100vw - 20px));
   }
 
